test/should-fail/vsgc4173a.f3
/**
 * Regress test for VSGC-4173.
 *
 *  Improved support for forward references
 *
 * @compilearg -XDfwdRefOpt=onreplace
 * @compile vsgc4173sub.f3
 * @test/warning
 */
